# aulas/aula10/swagger.yaml
@@ -15,6 +15,8 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/ArrayOfProdutos'
+      security:
+        - JWTAuth: []
     post:
       tags:
         - produtos
@@ -114,3 +116,8 @@ components:
       properties:
         msg:
           type: string
+  securitySchemes:
+    JWTAuth:
+      type: apiKey
+      in: header
+      name: Authorization
